Fix Safari linear gradient and animation overflow.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,9 @@ $vue-content-placeholders-spacing: 10px !default;
 // Mixins
 @mixin vue-content-placeholders {
   position: relative;
-  overflow: hidden;
+  overflow: hidden;  /* Other browser*/
+  overflow: overlay; /* Chrome */
+  z-index: 1;
   height: $vue-content-placeholders-line-height;
   background: $vue-content-placeholders-secondary-color;
 
@@ -44,7 +46,7 @@ $vue-content-placeholders-spacing: 10px !default;
     width: 100vw;
     max-width: 1000px;
     height: 100%;
-    background: linear-gradient(to right, transparent 0%, darken($vue-content-placeholders-secondary-color, 5%) 15%, transparent 30%);
+    background: linear-gradient(to right, rgba(darken($vue-content-placeholders-secondary-color, 5%), 0) 0%, darken($vue-content-placeholders-secondary-color, 5%) 15%, rgba(darken($vue-content-placeholders-secondary-color, 5%), 0) 30%);
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
